accelerated-domains: add kuaihuoyun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54995,6 +54995,7 @@ server=/kuaiguohui.com/114.114.114.114
 server=/kuaih5.com/114.114.114.114
 server=/kuaihaodai.com/114.114.114.114
 server=/kuaihecaishui.com/114.114.114.114
+server=/kuaihuoyun.com/114.114.114.114
 server=/kuaihz.com/114.114.114.114
 server=/kuaiji.com/114.114.114.114
 server=/kuaiji.so/114.114.114.114
