--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79468,6 +79468,7 @@ server=/springtour.com/114.114.114.114
 server=/sprint-tech.com/114.114.114.114
 server=/sprixin.com/114.114.114.114
 server=/spsb114.com/114.114.114.114
+server=/spsisncl.com/114.114.114.114
 server=/spsy.org/114.114.114.114
 server=/sptcc.com/114.114.114.114
 server=/sptccn.com/114.114.114.114
