accelerated-domains: add zhonggushipping.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102639,6 +102639,7 @@ server=/zhongguosou.com/114.114.114.114
 server=/zhongguoss.com/114.114.114.114
 server=/zhongguowangshi.com/114.114.114.114
 server=/zhongguoym.com/114.114.114.114
+server=/zhonggushipping.com/114.114.114.114
 server=/zhonghaitech.com/114.114.114.114
 server=/zhonghaojituan.com/114.114.114.114
 server=/zhonghe58.com/114.114.114.114
