--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79397,6 +79397,7 @@ server=/specialcdnstatus.com/114.114.114.114
 server=/spectreax.com/114.114.114.114
 server=/spectreax.site/114.114.114.114
 server=/speechless.pw/114.114.114.114
+server=/speedaf.com/114.114.114.114
 server=/speedcdns.com/114.114.114.114
 server=/speedcdns.info/114.114.114.114
 server=/speedmanager.net/114.114.114.114
