--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13027,6 +13027,7 @@ server=/baijob.com/114.114.114.114
 server=/baijunjz.com/114.114.114.114
 server=/baijunyao.com/114.114.114.114
 server=/baijus.net/114.114.114.114
+server=/baikalasia.com/114.114.114.114
 server=/baikalminer.com/114.114.114.114
 server=/baikangyun.com/114.114.114.114
 server=/baike.biz/114.114.114.114
