accelerated-domains: add fzfu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33403,6 +33403,7 @@ server=/fzengine.com/114.114.114.114
 server=/fzentertainment.com/114.114.114.114
 server=/fzfinancing.com/114.114.114.114
 server=/fzfrp.com/114.114.114.114
+server=/fzfu.com/114.114.114.114
 server=/fzfzjx.com/114.114.114.114
 server=/fzg360.com/114.114.114.114
 server=/fzghy.com/114.114.114.114
