accelerated-domains: add youlupei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98876,6 +98876,7 @@ server=/youlongteng.com/114.114.114.114
 server=/youlu.com/114.114.114.114
 server=/youlu.net/114.114.114.114
 server=/youlu6.com/114.114.114.114
+server=/youlupei.com/114.114.114.114
 server=/youluwx.com/114.114.114.114
 server=/youma.cc/114.114.114.114
 server=/youmai.com/114.114.114.114
