--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5814,6 +5814,7 @@ server=/56china.com/114.114.114.114
 server=/56clte.org/114.114.114.114
 server=/56dagong.com/114.114.114.114
 server=/56dichan.com/114.114.114.114
+server=/56dq.com/114.114.114.114
 server=/56dr.com/114.114.114.114
 server=/56dr.net/114.114.114.114
 server=/56dz.com/114.114.114.114
