--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21373,6 +21373,7 @@ server=/cjasen.com/114.114.114.114
 server=/cjavapy.com/114.114.114.114
 server=/cjbeng.com/114.114.114.114
 server=/cjbjedu.com/114.114.114.114
+server=/cjchina.net/114.114.114.114
 server=/cjcn.com/114.114.114.114
 server=/cjcnn.com/114.114.114.114
 server=/cjdcw.com/114.114.114.114
