--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22016,6 +22016,7 @@ server=/cn-unitech.com/114.114.114.114
 server=/cn-vending.com/114.114.114.114
 server=/cn-visa.com/114.114.114.114
 server=/cn-weida.com/114.114.114.114
+server=/cn-wisely.com/114.114.114.114
 server=/cn-witmed.com/114.114.114.114
 server=/cn-zhentai.com/114.114.114.114
 server=/cn.bing.com/114.114.114.114
