--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53428,6 +53428,7 @@ server=/kaiyinedu.com/114.114.114.114
 server=/kaiyuan.me/114.114.114.114
 server=/kaiyuan308.vip/114.114.114.114
 server=/kaiyuanbusiness.com/114.114.114.114
+server=/kaiyuancn.com/114.114.114.114
 server=/kaiyuangroup.cc/114.114.114.114
 server=/kaiyuanhospital.com/114.114.114.114
 server=/kaiyuanhotels.com/114.114.114.114
