--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5817,6 +5817,7 @@ server=/56dichan.com/114.114.114.114
 server=/56dq.com/114.114.114.114
 server=/56dr.com/114.114.114.114
 server=/56dr.net/114.114.114.114
+server=/56dt.com/114.114.114.114
 server=/56dz.com/114.114.114.114
 server=/56ggb.com/114.114.114.114
 server=/56gk.com/114.114.114.114
