accelerated-domains: add wedoexpress.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88755,6 +88755,7 @@ server=/wedfairy.com/114.114.114.114
 server=/wedn.net/114.114.114.114
 server=/wedoany.com/114.114.114.114
 server=/wedoctor.com/114.114.114.114
+server=/wedoexpress.com/114.114.114.114
 server=/wedolook.com/114.114.114.114
 server=/wedooapp.com/114.114.114.114
 server=/wedumedical.com/114.114.114.114
