--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75003,6 +75003,7 @@ server=/sdgslb.com/114.114.114.114
 server=/sdgslbc.com/114.114.114.114
 server=/sdgslbd.com/114.114.114.114
 server=/sdgswh.com/114.114.114.114
+server=/sdgswl.com/114.114.114.114
 server=/sdgt1985.com/114.114.114.114
 server=/sdguguo.com/114.114.114.114
 server=/sdgw.com/114.114.114.114
