--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55184,6 +55184,7 @@ server=/kugousenior.com/114.114.114.114
 server=/kugoustore.com/114.114.114.114
 server=/kugouvoice.com/114.114.114.114
 server=/kugouyouth.com/114.114.114.114
+server=/kuguanyi.com/114.114.114.114
 server=/kuhdew.com/114.114.114.114
 server=/kuheju.com/114.114.114.114
 server=/kuhii.com/114.114.114.114
