--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9082,6 +9082,7 @@ server=/aa77kk.com/114.114.114.114
 server=/aa8828.com/114.114.114.114
 server=/aaalawfirm.com/114.114.114.114
 server=/aaalian.com/114.114.114.114
+server=/aaalogisticsgroup.com/114.114.114.114
 server=/aaareplicawatch.com/114.114.114.114
 server=/aaayu.com/114.114.114.114
 server=/aaayun.com/114.114.114.114
