--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58211,6 +58211,7 @@ server=/lmmob.com/114.114.114.114
 server=/lmnano.com/114.114.114.114
 server=/lmnsaas.com/114.114.114.114
 server=/lmonkey.com/114.114.114.114
+server=/lmparcel.com/114.114.114.114
 server=/lmqt.com/114.114.114.114
 server=/lms.pub/114.114.114.114
 server=/lmschina.net/114.114.114.114
