accelerated-domains: add uisee.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85941,6 +85941,7 @@ server=/uipaas-assets.com/114.114.114.114
 server=/uipower.com/114.114.114.114
 server=/uiren.net/114.114.114.114
 server=/uisdc.com/114.114.114.114
+server=/uisee.com/114.114.114.114
 server=/uisheji.com/114.114.114.114
 server=/uishijie.com/114.114.114.114
 server=/uisnetwork.com/114.114.114.114
