--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86337,6 +86337,7 @@ server=/upx8.com/114.114.114.114
 server=/upyun.com/114.114.114.114
 server=/upyunso.com/114.114.114.114
 server=/upzxt.com/114.114.114.114
+server=/uq-express.com/114.114.114.114
 server=/uqbike.com/114.114.114.114
 server=/uqche.com/114.114.114.114
 server=/uqd1.net/114.114.114.114
