--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49538,6 +49538,7 @@ server=/jestq.com/114.114.114.114
 server=/jet-logistics.com/114.114.114.114
 server=/jet-ok.com/114.114.114.114
 server=/jetechtool.com/114.114.114.114
+server=/jetgroup-cn.com/114.114.114.114
 server=/jethoo.com/114.114.114.114
 server=/jethro.fun/114.114.114.114
 server=/jetionservice.com/114.114.114.114
