accelerated-domains: add nbgjwl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64071,6 +64071,7 @@ server=/nbfox.com/114.114.114.114
 server=/nbfzsj.com/114.114.114.114
 server=/nbgdjt.com/114.114.114.114
 server=/nbginnovations.com/114.114.114.114
+server=/nbgjwl.com/114.114.114.114
 server=/nbgong.com/114.114.114.114
 server=/nbgroupllc.com/114.114.114.114
 server=/nbgy.com/114.114.114.114
