--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83899,6 +83899,7 @@ server=/tmmini.com/114.114.114.114
 server=/tmqmqj.com/114.114.114.114
 server=/tmrcw.com/114.114.114.114
 server=/tmrenergy.com/114.114.114.114
+server=/tms8.com/114.114.114.114
 server=/tmscnz.com/114.114.114.114
 server=/tmsemi.com/114.114.114.114
 server=/tmsf.com/114.114.114.114
