accelerated-domains: add far800.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31216,6 +31216,7 @@ server=/fapselc.com/114.114.114.114
 server=/faqianjia.com/114.114.114.114
 server=/faqingtie.com/114.114.114.114
 server=/far123.com/114.114.114.114
+server=/far800.com/114.114.114.114
 server=/faraconix.com/114.114.114.114
 server=/faradayfuturecn.com/114.114.114.114
 server=/faradynamics.com/114.114.114.114
