accelerated-domains: add scmfair.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74793,6 +74793,7 @@ server=/sclzfq.com/114.114.114.114
 server=/scm121.com/114.114.114.114
 server=/scmccboss.com/114.114.114.114
 server=/scmchem.com/114.114.114.114
+server=/scmfair.com/114.114.114.114
 server=/scmor.com/114.114.114.114
 server=/scmroad.com/114.114.114.114
 server=/scmsky.com/114.114.114.114
