--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99008,6 +99008,7 @@ server=/youtibao.com/114.114.114.114
 server=/youto.club/114.114.114.114
 server=/youtoart.com/114.114.114.114
 server=/youtoupiao.com/114.114.114.114
+server=/youtrans.net/114.114.114.114
 server=/youtu.com/114.114.114.114
 server=/youtube-dubbing.com/114.114.114.114
 server=/youtuple.com/114.114.114.114
