--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99910,6 +99910,7 @@ server=/yun-health.com/114.114.114.114
 server=/yun-idc.com/114.114.114.114
 server=/yun-img.com/114.114.114.114
 server=/yun-jinrong.com/114.114.114.114
+server=/yun-jintong.com/114.114.114.114
 server=/yun-live.com/114.114.114.114
 server=/yun-qu.com/114.114.114.114
 server=/yun123.com/114.114.114.114
