accelerated-domains: add 56hb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5822,6 +5822,7 @@ server=/56dt.com/114.114.114.114
 server=/56dz.com/114.114.114.114
 server=/56ggb.com/114.114.114.114
 server=/56gk.com/114.114.114.114
+server=/56hb.com/114.114.114.114
 server=/56home.org/114.114.114.114
 server=/56img.com/114.114.114.114
 server=/56img.net/114.114.114.114
