accelerated-domains: add wlerp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90334,6 +90334,7 @@ server=/wld5.com/114.114.114.114
 server=/wldlr.com/114.114.114.114
 server=/wldmarket.com/114.114.114.114
 server=/wldsb.com/114.114.114.114
+server=/wlerp.com/114.114.114.114
 server=/wleye.com/114.114.114.114
 server=/wlfimms.com/114.114.114.114
 server=/wlgkk.com/114.114.114.114
