accelerated-domains: add meyoufreight.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61341,6 +61341,7 @@ server=/mexontec.net/114.114.114.114
 server=/mexue.com/114.114.114.114
 server=/mexxum.com/114.114.114.114
 server=/meyet.net/114.114.114.114
+server=/meyoufreight.com/114.114.114.114
 server=/meyum1688.com/114.114.114.114
 server=/mezhiyu.com/114.114.114.114
 server=/mezw.com/114.114.114.114
