--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74382,6 +74382,7 @@ server=/sanyaff.com/114.114.114.114
 server=/sanyajob.com/114.114.114.114
 server=/sanyamotor.com/114.114.114.114
 server=/sanyanblockchain.com/114.114.114.114
+server=/sanyangma.com/114.114.114.114
 server=/sanyastar.com/114.114.114.114
 server=/sanyasx.com/114.114.114.114
 server=/sanyawater.com/114.114.114.114
