accelerated-domains: add sunwayx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80387,6 +80387,7 @@ server=/sunwardcap.com/114.114.114.114
 server=/sunwatt.com/114.114.114.114
 server=/sunwayland.com/114.114.114.114
 server=/sunwayworld.com/114.114.114.114
+server=/sunwayx.com/114.114.114.114
 server=/sunweihu.com/114.114.114.114
 server=/sunweiwei.com/114.114.114.114
 server=/sunwellpower.com/114.114.114.114
