--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63237,6 +63237,7 @@ server=/mw.com/114.114.114.114
 server=/mw1950.com/114.114.114.114
 server=/mwadx.com/114.114.114.114
 server=/mwave.tech/114.114.114.114
+server=/mwclg.com/114.114.114.114
 server=/mwcloudcdn.com/114.114.114.114
 server=/mwcloudcdn.info/114.114.114.114
 server=/mwcname.com/114.114.114.114
