--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87725,6 +87725,7 @@ server=/vtepai.net/114.114.114.114
 server=/vtibet.com/114.114.114.114
 server=/vtool.vip/114.114.114.114
 server=/vtoutiao.cc/114.114.114.114
+server=/vtradex.com/114.114.114.114
 server=/vtrois.com/114.114.114.114
 server=/vtron.site/114.114.114.114
 server=/vts-lab.com/114.114.114.114
