accelerated-domains: add sjlexpress.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78300,6 +78300,7 @@ server=/sjjt001.com/114.114.114.114
 server=/sjjzm.com/114.114.114.114
 server=/sjkj.net/114.114.114.114
 server=/sjlbearing.com/114.114.114.114
+server=/sjlexpress.com/114.114.114.114
 server=/sjlgc.com/114.114.114.114
 server=/sjlhlawyer.com/114.114.114.114
 server=/sjm-zdh.com/114.114.114.114
