accelerated-domains: add zoneray56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104277,6 +104277,7 @@ server=/zoneidc.com/114.114.114.114
 server=/zoneker.com/114.114.114.114
 server=/zonemore.com/114.114.114.114
 server=/zonen-tech.com/114.114.114.114
+server=/zoneray56.com/114.114.114.114
 server=/zoneve.com/114.114.114.114
 server=/zoneyung.com/114.114.114.114
 server=/zongdegongju.com/114.114.114.114
