--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94856,6 +94856,7 @@ server=/xn--vhqu1kbz3bnbi.com/114.114.114.114
 server=/xn--vhqw7k2xlb49a.com/114.114.114.114
 server=/xn--viq463a.com/114.114.114.114
 server=/xn--vnuqa4644aq5c0si.xn--3ds443g/114.114.114.114
+server=/xn--vq3a5gj6c9i.com/114.114.114.114
 server=/xn--vuq861bxlk562b.com/114.114.114.114
 server=/xn--vuqz86auobw20f.com/114.114.114.114
 server=/xn--vusu0mbusw10a.xn--czr694b/114.114.114.114
