accelerated-domains: add sdland-sea.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75079,6 +75079,7 @@ server=/sdklh.com/114.114.114.114
 server=/sdknext.com/114.114.114.114
 server=/sdksrv.com/114.114.114.114
 server=/sdlaien.com/114.114.114.114
+server=/sdland-sea.com/114.114.114.114
 server=/sdland-sea.net/114.114.114.114
 server=/sdlcbyq.com/114.114.114.114
 server=/sdlfhbkj.com/114.114.114.114
