--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18915,6 +18915,7 @@ server=/cfkdn.com/114.114.114.114
 server=/cfkjgx.com/114.114.114.114
 server=/cflab.net/114.114.114.114
 server=/cflm.com/114.114.114.114
+server=/cflpla.com/114.114.114.114
 server=/cfm119.com/114.114.114.114
 server=/cfmcc.com/114.114.114.114
 server=/cfmcjr6.xyz/114.114.114.114
