accelerated-domains: add chinaviwon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20572,6 +20572,7 @@ server=/chinaviolin.net/114.114.114.114
 server=/chinavipsoft.com/114.114.114.114
 server=/chinavisual.com/114.114.114.114
 server=/chinavivers.com/114.114.114.114
+server=/chinaviwon.com/114.114.114.114
 server=/chinavr.net/114.114.114.114
 server=/chinawanbang.com/114.114.114.114
 server=/chinawanda.com/114.114.114.114
