--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34278,6 +34278,7 @@ server=/gdstlab.com/114.114.114.114
 server=/gdsugar.com/114.114.114.114
 server=/gdsunfly.com/114.114.114.114
 server=/gdsunhot.com/114.114.114.114
+server=/gdsunli.com/114.114.114.114
 server=/gdsuxie.com/114.114.114.114
 server=/gdswgc.com/114.114.114.114
 server=/gdswine.com/114.114.114.114
