accelerated-domains: add nikkon-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64773,6 +64773,7 @@ server=/nikke-kr.com/114.114.114.114
 server=/nikke-sea.com/114.114.114.114
 server=/nikkisoft.com/114.114.114.114
 server=/nikkiup2u2.com/114.114.114.114
+server=/nikkon-china.com/114.114.114.114
 server=/nilai.com/114.114.114.114
 server=/nileloan.com/114.114.114.114
 server=/nilend.com/114.114.114.114
