--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81177,6 +81177,7 @@ server=/sz240.com/114.114.114.114
 server=/sz315.org/114.114.114.114
 server=/sz3dp.com/114.114.114.114
 server=/sz5156.com/114.114.114.114
+server=/sz56t.com/114.114.114.114
 server=/sz5983.com/114.114.114.114
 server=/sz7h.com/114.114.114.114
 server=/sz836.com/114.114.114.114
