--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58481,6 +58481,7 @@ server=/longpokeji.com/114.114.114.114
 server=/longquan-baojian.com/114.114.114.114
 server=/longquecdn.com/114.114.114.114
 server=/longre.com/114.114.114.114
+server=/longsailing.net/114.114.114.114
 server=/longsan.com/114.114.114.114
 server=/longshanchemical.com/114.114.114.114
 server=/longshangrc.com/114.114.114.114
