--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66103,6 +66103,7 @@ server=/npbeta.com/114.114.114.114
 server=/npc.ink/114.114.114.114
 server=/npc233.com/114.114.114.114
 server=/npcka.com/114.114.114.114
+server=/npedi.com/114.114.114.114
 server=/npfls.com/114.114.114.114
 server=/nphoto.net/114.114.114.114
 server=/npi-sh.com/114.114.114.114
