accelerated-domains: add ytedi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99473,6 +99473,7 @@ server=/ytdcloud.com/114.114.114.114
 server=/ytdewei.com/114.114.114.114
 server=/yte1.com/114.114.114.114
 server=/ytecn.com/114.114.114.114
+server=/ytedi.com/114.114.114.114
 server=/ytelc.com/114.114.114.114
 server=/yteng.net/114.114.114.114
 server=/ytesting.com/114.114.114.114
