--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49750,6 +49750,7 @@ server=/jiaben.com/114.114.114.114
 server=/jiacai001.com/114.114.114.114
 server=/jiacaitc.com/114.114.114.114
 server=/jiachangshichutieqi.com/114.114.114.114
+server=/jiacheng88.com/114.114.114.114
 server=/jiachong.com/114.114.114.114
 server=/jiadafoods.com/114.114.114.114
 server=/jiadapaper.com/114.114.114.114
