accelerated-domains: add saichenglogistics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74145,6 +74145,7 @@ server=/saicdt.com/114.114.114.114
 server=/saicfinance.com/114.114.114.114
 server=/saicgmac.com/114.114.114.114
 server=/saicgroup.com/114.114.114.114
+server=/saichenglogistics.com/114.114.114.114
 server=/saicjg.com/114.114.114.114
 server=/saicmaxus.com/114.114.114.114
 server=/saicmg.com/114.114.114.114
