accelerated-domains: add 360lion.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -3552,6 +3552,7 @@ server=/360kuai.com/114.114.114.114
 server=/360kuaixiao.com/114.114.114.114
 server=/360kuaixue.com/114.114.114.114
 server=/360kxr.com/114.114.114.114
+server=/360lion.com/114.114.114.114
 server=/360lj.com/114.114.114.114
 server=/360lnk.com/114.114.114.114
 server=/360longyan.com/114.114.114.114
