accelerated-domains: add hscode.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43970,6 +43970,7 @@ server=/hsbiao.com/114.114.114.114
 server=/hscarbonfibre.com/114.114.114.114
 server=/hscbw.com/114.114.114.114
 server=/hscn.com/114.114.114.114
+server=/hscode.net/114.114.114.114
 server=/hscode123.com/114.114.114.114
 server=/hsd588.com/114.114.114.114
 server=/hsdatalab.com/114.114.114.114
