accelerated-domains: add lcang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56224,6 +56224,7 @@ server=/lc123.net/114.114.114.114
 server=/lc1618.com/114.114.114.114
 server=/lc442.com/114.114.114.114
 server=/lc787.com/114.114.114.114
+server=/lcang.com/114.114.114.114
 server=/lcatgame.com/114.114.114.114
 server=/lcayun.com/114.114.114.114
 server=/lcbdf.net/114.114.114.114
