--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99274,6 +99274,7 @@ server=/yqmb001.com/114.114.114.114
 server=/yqmengyou.com/114.114.114.114
 server=/yqmh.com/114.114.114.114
 server=/yqms.net/114.114.114.114
+server=/yqn.com/114.114.114.114
 server=/yqok.com/114.114.114.114
 server=/yqphh.com/114.114.114.114
 server=/yqqqbm.com/114.114.114.114
