accelerated-domains: add ktu56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54948,6 +54948,7 @@ server=/ktrcn.com/114.114.114.114
 server=/ktstny.com/114.114.114.114
 server=/ktswjt.com/114.114.114.114
 server=/ktt-automation.com/114.114.114.114
+server=/ktu56.com/114.114.114.114
 server=/ktuner.store/114.114.114.114
 server=/ktv.com/114.114.114.114
 server=/ktvc8.com/114.114.114.114
