accelerated-domains: add lecong56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56450,6 +56450,7 @@ server=/lecloud.com/114.114.114.114
 server=/lecloudapis.com/114.114.114.114
 server=/lecoinfrancais.org/114.114.114.114
 server=/lecomposites.com/114.114.114.114
+server=/lecong56.com/114.114.114.114
 server=/leconiot.com/114.114.114.114
 server=/lecoo.com/114.114.114.114
 server=/lecreperoyaloak.com/114.114.114.114
