accelerated-domains: add baiccl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12894,6 +12894,7 @@ server=/baicaiyouxuan.com/114.114.114.114
 server=/baicaolu.net/114.114.114.114
 server=/baicaosoft.com/114.114.114.114
 server=/baiccapital.com/114.114.114.114
+server=/baiccl.com/114.114.114.114
 server=/baicdnx.com/114.114.114.114
 server=/baicells.com/114.114.114.114
 server=/baichanghui.com/114.114.114.114
