accelerated-domains: add fineex.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32010,6 +32010,7 @@ server=/findyou.xin/114.114.114.114
 server=/findzd.com/114.114.114.114
 server=/finebey.com/114.114.114.114
 server=/finebi.com/114.114.114.114
+server=/fineex.com/114.114.114.114
 server=/fineforming.com/114.114.114.114
 server=/fineidc.com/114.114.114.114
 server=/fineimmu.com/114.114.114.114
