--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103537,6 +103537,7 @@ server=/zjbdfood.com/114.114.114.114
 server=/zjbdt.com/114.114.114.114
 server=/zjbeacon.com/114.114.114.114
 server=/zjbelong.com/114.114.114.114
+server=/zjbhi.com/114.114.114.114
 server=/zjbinya.com/114.114.114.114
 server=/zjbolunfilter.com/114.114.114.114
 server=/zjbuc.com/114.114.114.114
