accelerated-domains: add bkkchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15723,6 +15723,7 @@ server=/bkjk.com/114.114.114.114
 server=/bkjk123.com/114.114.114.114
 server=/bkjpress.com/114.114.114.114
 server=/bkjsemi.com/114.114.114.114
+server=/bkkchina.com/114.114.114.114
 server=/bkn.cc/114.114.114.114
 server=/bkneng.com/114.114.114.114
 server=/bknzdh.com/114.114.114.114
