--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43645,6 +43645,7 @@ server=/hostidc.net/114.114.114.114
 server=/hostkvm.com/114.114.114.114
 server=/hostloc.me/114.114.114.114
 server=/hostmonit.com/114.114.114.114
+server=/hostoexp.com/114.114.114.114
 server=/hostxen.com/114.114.114.114
 server=/hot0755.com/114.114.114.114
 server=/hotalk.com/114.114.114.114
