--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13501,6 +13501,7 @@ server=/baoqin.com/114.114.114.114
 server=/baoqingvip.com/114.114.114.114
 server=/baoruan.com/114.114.114.114
 server=/baoruisi.com/114.114.114.114
+server=/baosen.com/114.114.114.114
 server=/baoshangj.com/114.114.114.114
 server=/baoshe.net/114.114.114.114
 server=/baoshe01.com/114.114.114.114
