accelerated-domains: add glafamily.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35175,6 +35175,7 @@ server=/gl2mt.com/114.114.114.114
 server=/glab.online/114.114.114.114
 server=/gladcc.com/114.114.114.114
 server=/gladdigit.com/114.114.114.114
+server=/glafamily.com/114.114.114.114
 server=/glajzl.com/114.114.114.114
 server=/glamever.com/114.114.114.114
 server=/glamourred.com/114.114.114.114
