--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76428,6 +76428,7 @@ server=/shenghuo365.com/114.114.114.114
 server=/shenghuojia.com/114.114.114.114
 server=/shenghuorili.com/114.114.114.114
 server=/shenghuowo.com/114.114.114.114
+server=/shengjie-logistics.com/114.114.114.114
 server=/shengjing360.com/114.114.114.114
 server=/shengjinghe.com/114.114.114.114
 server=/shengjinglinye.com/114.114.114.114
