--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28084,6 +28084,7 @@ server=/dsspinfo.com/114.114.114.114
 server=/dsstudio.tech/114.114.114.114
 server=/dssz.com/114.114.114.114
 server=/dst.gov.mo/114.114.114.114
+server=/dstcar.com/114.114.114.114
 server=/dstfsbc.com/114.114.114.114
 server=/dsti.net/114.114.114.114
 server=/dsvfdsf-bnigfo-sdkkg.com/114.114.114.114
