--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61289,6 +61289,7 @@ server=/mepoem.com/114.114.114.114
 server=/meppon.com/114.114.114.114
 server=/merach.com/114.114.114.114
 server=/mercedes-benzarena.com/114.114.114.114
+server=/merchaincargo.com/114.114.114.114
 server=/merchant-partners.org/114.114.114.114
 server=/mercitime.com/114.114.114.114
 server=/mereith.com/114.114.114.114
