accelerated-domains: add piflogistics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68590,6 +68590,7 @@ server=/piekee.net/114.114.114.114
 server=/pieshua.com/114.114.114.114
 server=/pifa.bz/114.114.114.114
 server=/pifa333.com/114.114.114.114
+server=/piflogistics.com/114.114.114.114
 server=/pifukezaixian.com/114.114.114.114
 server=/pig4cloud.com/114.114.114.114
 server=/pig66.com/114.114.114.114
