accelerated-domains: add gtg56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36366,6 +36366,7 @@ server=/gtdreamlife.com/114.114.114.114
 server=/gter.net/114.114.114.114
 server=/gtetern.com/114.114.114.114
 server=/gtfund.com/114.114.114.114
+server=/gtg56.com/114.114.114.114
 server=/gtgres.com/114.114.114.114
 server=/gthzc.com/114.114.114.114
 server=/gti56.com/114.114.114.114
