accelerated-domains: add yxilogistics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100565,6 +100565,7 @@ server=/yxiannetgz.com/114.114.114.114
 server=/yxiaoy.com/114.114.114.114
 server=/yxid.net/114.114.114.114
 server=/yxielts.com/114.114.114.114
+server=/yxilogistics.com/114.114.114.114
 server=/yximgs.com/114.114.114.114
 server=/yxin18.com/114.114.114.114
 server=/yxinbao.com/114.114.114.114
