--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18370,6 +18370,7 @@ server=/cdhtnews.com/114.114.114.114
 server=/cdhtrq.com/114.114.114.114
 server=/cdhxdq.com/114.114.114.114
 server=/cdidc.net/114.114.114.114
+server=/cdirs.com/114.114.114.114
 server=/cditv.tv/114.114.114.114
 server=/cdjfwy.com/114.114.114.114
 server=/cdjhqczl.com/114.114.114.114
