accelerated-domains: add jiangzuoku.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49947,6 +49947,7 @@ server=/jiangzheba.com/114.114.114.114
 server=/jiangzidushu.com/114.114.114.114
 server=/jiangzikanshu.com/114.114.114.114
 server=/jiangziyuedu.com/114.114.114.114
+server=/jiangzuoku.net/114.114.114.114
 server=/jianhaobao.com/114.114.114.114
 server=/jianhuagroup.com/114.114.114.114
 server=/jianhuasheng.com/114.114.114.114
