--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86234,6 +86234,7 @@ server=/unitedbank.ltd/114.114.114.114
 server=/unitedmoney.com/114.114.114.114
 server=/unitek-it.com/114.114.114.114
 server=/unitemotor.com/114.114.114.114
+server=/unitexlogistics.com/114.114.114.114
 server=/uniteyun.com/114.114.114.114
 server=/unithelper.com/114.114.114.114
 server=/unithinker.com/114.114.114.114
