accelerated-domains: add yiwu56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98003,6 +98003,7 @@ server=/yiwise.com/114.114.114.114
 server=/yiwk.com/114.114.114.114
 server=/yiwomedical.com/114.114.114.114
 server=/yiworld.com/114.114.114.114
+server=/yiwu56.com/114.114.114.114
 server=/yiwubuy.com/114.114.114.114
 server=/yiwufair.com/114.114.114.114
 server=/yiwugo.com/114.114.114.114
