--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41486,6 +41486,7 @@ server=/header.cc/114.114.114.114
 server=/heading123.com/114.114.114.114
 server=/headingfilter.com/114.114.114.114
 server=/headphoneclub.com/114.114.114.114
+server=/headscm.com/114.114.114.114
 server=/healrna.com/114.114.114.114
 server=/healthan.net/114.114.114.114
 server=/healthcareol.net/114.114.114.114
