accelerated-domains: add hsfh56.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43997,6 +43997,7 @@ server=/hseda.com/114.114.114.114
 server=/hsehome.com/114.114.114.114
 server=/hsehome.org/114.114.114.114
 server=/hsez.net/114.114.114.114
+server=/hsfh56.com/114.114.114.114
 server=/hsfund.com/114.114.114.114
 server=/hsfyyy.com/114.114.114.114
 server=/hsfzexsg.com/114.114.114.114
