--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80876,6 +80876,7 @@ server=/sxrszdh.com/114.114.114.114
 server=/sxrtv.com/114.114.114.114
 server=/sxs56.com/114.114.114.114
 server=/sxsapi.com/114.114.114.114
+server=/sxscwl.com/114.114.114.114
 server=/sxsfdxylsyzx.com/114.114.114.114
 server=/sxsfyyy.com/114.114.114.114
 server=/sxsgs.com/114.114.114.114
