--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93691,6 +93691,7 @@ server=/xingsteel.com/114.114.114.114
 server=/xingsuyun58.com/114.114.114.114
 server=/xingtai0319.com/114.114.114.114
 server=/xingtai123.com/114.114.114.114
+server=/xingtaishipping.com/114.114.114.114
 server=/xingtangzp.com/114.114.114.114
 server=/xingtongsw.com/114.114.114.114
 server=/xingtu.com/114.114.114.114
