--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11390,6 +11390,7 @@ server=/antuofh.com/114.114.114.114
 server=/antutu.com/114.114.114.114
 server=/antutu.net/114.114.114.114
 server=/antvr.com/114.114.114.114
+server=/antwork.link/114.114.114.114
 server=/antzk.com/114.114.114.114
 server=/anviettek.com/114.114.114.114
 server=/anw.red/114.114.114.114
