accelerated-domains: add logory.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58382,6 +58382,7 @@ server=/logohhh.com/114.114.114.114
 server=/logoly.pro/114.114.114.114
 server=/logoqq.com/114.114.114.114
 server=/logoquan.com/114.114.114.114
+server=/logory.com/114.114.114.114
 server=/logoshe.com/114.114.114.114
 server=/logosheji.com/114.114.114.114
 server=/logoshejishi.com/114.114.114.114
