accelerated-domains: add jfchinese.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49590,6 +49590,7 @@ server=/jfapv.net/114.114.114.114
 server=/jfbcb.com/114.114.114.114
 server=/jfbuilding.com/114.114.114.114
 server=/jfcdns.com/114.114.114.114
+server=/jfchinese.com/114.114.114.114
 server=/jfcoo.com/114.114.114.114
 server=/jfdaily.com/114.114.114.114
 server=/jfedu.net/114.114.114.114
