--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50167,6 +50167,7 @@ server=/jiaxingren.com/114.114.114.114
 server=/jiaxinmore.com/114.114.114.114
 server=/jiaxinxuetang.com/114.114.114.114
 server=/jiaxiweb.com/114.114.114.114
+server=/jiaxuanwl.com/114.114.114.114
 server=/jiaxue.xyz/114.114.114.114
 server=/jiaxuejiyin.com/114.114.114.114
 server=/jiayans.net/114.114.114.114
