accelerated-domains: add zdhuoyunbao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101297,6 +101297,7 @@ server=/zdh168.com/114.114.114.114
 server=/zdhaitao.com/114.114.114.114
 server=/zdhaitao.net/114.114.114.114
 server=/zdhnayr.com/114.114.114.114
+server=/zdhuoyunbao.com/114.114.114.114
 server=/zdhyibiao.com/114.114.114.114
 server=/zdic.net/114.114.114.114
 server=/zdjt.com/114.114.114.114
