--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61898,6 +61898,7 @@ server=/mingfudns.com/114.114.114.114
 server=/mingfuyun.com/114.114.114.114
 server=/mingguoshi.com/114.114.114.114
 server=/minghaoshangwu.com/114.114.114.114
+server=/minghecloud.com/114.114.114.114
 server=/mingheng-group.com/114.114.114.114
 server=/mingheyaoye.com/114.114.114.114
 server=/mingheyiyao.com/114.114.114.114
