accelerated-domains: add wetuc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89486,6 +89486,7 @@ server=/wetrial.com/114.114.114.114
 server=/wetruetech.com/114.114.114.114
 server=/wetry.shop/114.114.114.114
 server=/wetsd.com/114.114.114.114
+server=/wetuc.com/114.114.114.114
 server=/wetv.vip/114.114.114.114
 server=/wetvinfo.com/114.114.114.114
 server=/weui.io/114.114.114.114
