--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80283,6 +80283,7 @@ server=/sumwin.com/114.114.114.114
 server=/sumzc.com/114.114.114.114
 server=/sumzi.com/114.114.114.114
 server=/sun-ada.net/114.114.114.114
+server=/sun-hua.com/114.114.114.114
 server=/sun-wish.com/114.114.114.114
 server=/sun003.com/114.114.114.114
 server=/sun0769.com/114.114.114.114
