accelerated-domains: add xn--z4q559dueav8q.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94938,6 +94938,7 @@ server=/xn--yet74fr8g.com/114.114.114.114
 server=/xn--ygtp21bwyedsq.com/114.114.114.114
 server=/xn--yhqq38bmov17mqxi.com/114.114.114.114
 server=/xn--z3vq3r3u4a.xn--czr694b/114.114.114.114
+server=/xn--z4q559dueav8q.com/114.114.114.114
 server=/xn--z63a11k.com/114.114.114.114
 server=/xn--zwtr2f7xebqvx24ax9a.xn--3ds443g/114.114.114.114
 server=/xn-ck.com/114.114.114.114
