--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94856,6 +94856,7 @@ server=/xn--q20av2y36ac54a.com/114.114.114.114
 server=/xn--qkroa335nnol.com/114.114.114.114
 server=/xn--qrq171dxpq.com/114.114.114.114
 server=/xn--qruq25bjsj.net/114.114.114.114
+server=/xn--qzwx3ij21azka.com/114.114.114.114
 server=/xn--r8s65df7admf92a.com/114.114.114.114
 server=/xn--rhq112dhez17bejdyhl55dypc.com/114.114.114.114
 server=/xn--rhqt5j7qj6mj.com/114.114.114.114
