--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27023,6 +27023,7 @@ server=/dl0728.com/114.114.114.114
 server=/dl23zx.com/114.114.114.114
 server=/dl2link.com/114.114.114.114
 server=/dl321.net/114.114.114.114
+server=/dl56.net/114.114.114.114
 server=/dl8z.com/114.114.114.114
 server=/dlairport.com/114.114.114.114
 server=/dlangchina.com/114.114.114.114
