accelerated-domains: add hnhp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43035,6 +43035,7 @@ server=/hnhho.com/114.114.114.114
 server=/hnhjgd.com/114.114.114.114
 server=/hnhjjx.com/114.114.114.114
 server=/hnhnled.com/114.114.114.114
+server=/hnhp.com/114.114.114.114
 server=/hnhrsw.com/114.114.114.114
 server=/hnhsjt.com/114.114.114.114
 server=/hnhxin.com/114.114.114.114
