--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33717,6 +33717,7 @@ server=/gangqinpu.com/114.114.114.114
 server=/gangqinxiansheng.com/114.114.114.114
 server=/gangshenglian.com/114.114.114.114
 server=/gangyiku.com/114.114.114.114
+server=/gangyu.org/114.114.114.114
 server=/gangyuan.com/114.114.114.114
 server=/ganhuoche.com/114.114.114.114
 server=/ganhuodaquan.com/114.114.114.114
