accelerated-domains: add jiyida-logistics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51140,6 +51140,7 @@ server=/jixuanw.com/114.114.114.114
 server=/jixuninfo.com/114.114.114.114
 server=/jixunjsq.com/114.114.114.114
 server=/jixunlyq.com/114.114.114.114
+server=/jiyida-logistics.com/114.114.114.114
 server=/jiyikj.com/114.114.114.114
 server=/jiyili.net/114.114.114.114
 server=/jiyin-tech.com/114.114.114.114
