--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58818,6 +58818,7 @@ server=/lscstz.com/114.114.114.114
 server=/lscsw168.com/114.114.114.114
 server=/lsddnq.com/114.114.114.114
 server=/lsdzk.com/114.114.114.114
+server=/lserp.com/114.114.114.114
 server=/lsfcj.com/114.114.114.114
 server=/lsfvideo.com/114.114.114.114
 server=/lsfwpt.com/114.114.114.114
