accelerated-domains: add xiang.xin

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92695,6 +92695,7 @@ server=/xianfan2022.com/114.114.114.114
 server=/xianfeng.net/114.114.114.114
 server=/xianfengsg.com/114.114.114.114
 server=/xiang.com/114.114.114.114
+server=/xiang.xin/114.114.114.114
 server=/xiang5.com/114.114.114.114
 server=/xiang578.com/114.114.114.114
 server=/xiangange.com/114.114.114.114
