--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99274,6 +99274,7 @@ server=/ypk.cc/114.114.114.114
 server=/ypkegroup.com/114.114.114.114
 server=/ypky.net/114.114.114.114
 server=/yplady.com/114.114.114.114
+server=/yplogistics.com/114.114.114.114
 server=/ypppt.com/114.114.114.114
 server=/yprescdn.xyz/114.114.114.114
 server=/ypshengxian.com/114.114.114.114
