--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21928,6 +21928,7 @@ server=/cmidc.net/114.114.114.114
 server=/cming.com/114.114.114.114
 server=/cmiotcd.com/114.114.114.114
 server=/cmjz.net/114.114.114.114
+server=/cmlog.com/114.114.114.114
 server=/cmlong.com/114.114.114.114
 server=/cmmaap.com/114.114.114.114
 server=/cmmchn.com/114.114.114.114
