--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31337,6 +31337,7 @@ server=/fb56.com/114.114.114.114
 server=/fbaichuan.com/114.114.114.114
 server=/fbank.com/114.114.114.114
 server=/fbaot.com/114.114.114.114
+server=/fbatop.com/114.114.114.114
 server=/fbflex.com/114.114.114.114
 server=/fbghrcqggrksty.com/114.114.114.114
 server=/fbi.college/114.114.114.114
