accelerated-domains: add jinengtisheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50503,6 +50503,7 @@ server=/jindun007.net/114.114.114.114
 server=/jindunfan.com/114.114.114.114
 server=/jindunkeji.com/114.114.114.114
 server=/jinduoduo.net/114.114.114.114
+server=/jinengtisheng.com/114.114.114.114
 server=/jinenrunze.com/114.114.114.114
 server=/jinergy.com/114.114.114.114
 server=/jinerkang.com/114.114.114.114
