accelerated-domains: add sinoiov.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78118,6 +78118,7 @@ server=/sinoing.net/114.114.114.114
 server=/sinoinnovel.com/114.114.114.114
 server=/sinoins.com/114.114.114.114
 server=/sinointeractive.com/114.114.114.114
+server=/sinoiov.com/114.114.114.114
 server=/sinokap.com/114.114.114.114
 server=/sinolinchem.com/114.114.114.114
 server=/sinolinchemintl.com/114.114.114.114
