--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42683,6 +42683,7 @@ server=/hk-jztzjt.com/114.114.114.114
 server=/hk-tencentclb.com/114.114.114.114
 server=/hk-titan.com/114.114.114.114
 server=/hk-vstart.com/114.114.114.114
+server=/hk-xin.com/114.114.114.114
 server=/hk.uy/114.114.114.114
 server=/hk2875.com/114.114.114.114
 server=/hk515.net/114.114.114.114
