accelerated-domains: add tswljt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84867,6 +84867,7 @@ server=/tst98.com/114.114.114.114
 server=/tstvxmt.com/114.114.114.114
 server=/tsukistar.fun/114.114.114.114
 server=/tswjn.com/114.114.114.114
+server=/tswljt.com/114.114.114.114
 server=/tswmb.com/114.114.114.114
 server=/tswnanning.com/114.114.114.114
 server=/tswuby.com/114.114.114.114
