accelerated-domains: add 51autocar.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4697,6 +4697,7 @@ server=/51ask.org/114.114.114.114
 server=/51asm.com/114.114.114.114
 server=/51aspx.com/114.114.114.114
 server=/51auto.com/114.114.114.114
+server=/51autocar.net/114.114.114.114
 server=/51autogo.com/114.114.114.114
 server=/51autoimg.com/114.114.114.114
 server=/51awifi.com/114.114.114.114
