accelerated-domains: add autothinker.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12425,6 +12425,7 @@ server=/autoshafa.com/114.114.114.114
 server=/autoshanghai.org/114.114.114.114
 server=/autosmt.net/114.114.114.114
 server=/autosup.com/114.114.114.114
+server=/autothinker.net/114.114.114.114
 server=/autounicom.com/114.114.114.114
 server=/autovideo.club/114.114.114.114
 server=/autovolke.com/114.114.114.114
