--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15162,6 +15162,7 @@ server=/bizcn.com/114.114.114.114
 server=/bizcn.net/114.114.114.114
 server=/bizcn666.com/114.114.114.114
 server=/bizconfstreaming.com/114.114.114.114
+server=/bizhi3.com/114.114.114.114
 server=/bizhi360.com/114.114.114.114
 server=/bizhi88.com/114.114.114.114
 server=/bizhigq.com/114.114.114.114
