--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43123,6 +43123,7 @@ server=/hnpic.com/114.114.114.114
 server=/hnpolice.com/114.114.114.114
 server=/hnpwholesale.com.au/114.114.114.114
 server=/hnpysf.com/114.114.114.114
+server=/hnqczy.com/114.114.114.114
 server=/hnqfseed.com/114.114.114.114
 server=/hnqinshi.com/114.114.114.114
 server=/hnqjbh.com/114.114.114.114
