--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -63148,6 +63148,7 @@ server=/muchcloud.com/114.114.114.114
 server=/muchong.com/114.114.114.114
 server=/muchrank.com/114.114.114.114
 server=/muchunkang.com/114.114.114.114
+server=/mudanauto.com/114.114.114.114
 server=/mudgj.com/114.114.114.114
 server=/mudiaotx.com/114.114.114.114
 server=/mudongguang.com/114.114.114.114
