--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64535,6 +64535,7 @@ server=/nework360.com/114.114.114.114
 server=/neworldedu.org/114.114.114.114
 server=/newposture.vip/114.114.114.114
 server=/newqjsteel.com/114.114.114.114
+server=/newrizon.com/114.114.114.114
 server=/news-cdn.site/114.114.114.114
 server=/news18a.com/114.114.114.114
 server=/newsccn.com/114.114.114.114
