accelerated-domains: add yanfeng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96347,6 +96347,7 @@ server=/yanduyiyuan.com/114.114.114.114
 server=/yanedu.com/114.114.114.114
 server=/yanfabu.com/114.114.114.114
 server=/yanfen.online/114.114.114.114
+server=/yanfeng.com/114.114.114.114
 server=/yanfukun.com/114.114.114.114
 server=/yang99.fun/114.114.114.114
 server=/yangbentong.com/114.114.114.114
