--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27637,6 +27637,7 @@ server=/dopsie.fun/114.114.114.114
 server=/dora-control.cdnetworks.com/114.114.114.114
 server=/dora-family.com/114.114.114.114
 server=/dorapp.com/114.114.114.114
+server=/dorcen.com/114.114.114.114
 server=/doremi.ink/114.114.114.114
 server=/dorgean.com/114.114.114.114
 server=/dormforce.net/114.114.114.114
