accelerated-domains: add atc-sh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12244,6 +12244,7 @@ server=/atatech.org/114.114.114.114
 server=/atats.shop/114.114.114.114
 server=/atb.so/114.114.114.114
 server=/atbug.com/114.114.114.114
+server=/atc-sh.com/114.114.114.114
 server=/atcc360.com/114.114.114.114
 server=/atchip.com/114.114.114.114
 server=/atcloudbox.com/114.114.114.114
