accelerated-domains: add chebiao.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19394,6 +19394,7 @@ server=/chebada.com/114.114.114.114
 server=/chebaipishu.com/114.114.114.114
 server=/chebianjie.com/114.114.114.114
 server=/chebianjie.net/114.114.114.114
+server=/chebiao.cc/114.114.114.114
 server=/chebiao.net/114.114.114.114
 server=/chebrake.com/114.114.114.114
 server=/checar.mobi/114.114.114.114
