accelerated-domains: add globalchangan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35353,6 +35353,7 @@ server=/global56.com/114.114.114.114
 server=/globalaccentchinese.com/114.114.114.114
 server=/globalbaike.com/114.114.114.114
 server=/globalbuy.cc/114.114.114.114
+server=/globalchangan.com/114.114.114.114
 server=/globalcompressor.com/114.114.114.114
 server=/globaldangdang.hk/114.114.114.114
 server=/globaletrust.com/114.114.114.114
