--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71118,6 +71118,7 @@ server=/qixingtang.com/114.114.114.114
 server=/qixintian.com/114.114.114.114
 server=/qixinworks.com/114.114.114.114
 server=/qixiu88.com/114.114.114.114
+server=/qixiushouce.com/114.114.114.114
 server=/qixoo.com/114.114.114.114
 server=/qixuan888.com/114.114.114.114
 server=/qixuny.com/114.114.114.114
