accelerated-domains: add qoros.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71358,6 +71358,7 @@ server=/qooioo.com/114.114.114.114
 server=/qookar.com/114.114.114.114
 server=/qookkagames.com/114.114.114.114
 server=/qoqaoligei.com/114.114.114.114
+server=/qoros.com/114.114.114.114
 server=/qorosauto.com/114.114.114.114
 server=/qosnet.xyz/114.114.114.114
 server=/qosq.com/114.114.114.114
