--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36960,6 +36960,7 @@ server=/guoshusir.com/114.114.114.114
 server=/guosujt.com/114.114.114.114
 server=/guotaijsh.com/114.114.114.114
 server=/guotailiangyou.com/114.114.114.114
+server=/guotangauto.com/114.114.114.114
 server=/guoturen.com/114.114.114.114
 server=/guotv.com/114.114.114.114
 server=/guowaidiaocha.com/114.114.114.114
