--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72691,6 +72691,7 @@ server=/rbsr0.icu/114.114.114.114
 server=/rbtxw.com/114.114.114.114
 server=/rbz1672.com/114.114.114.114
 server=/rbzygs.com/114.114.114.114
+server=/rc-ev.com/114.114.114.114
 server=/rc114.com/114.114.114.114
 server=/rc3cr.com/114.114.114.114
 server=/rc775.com/114.114.114.114
