accelerated-domains: add zzqckj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -105397,6 +105397,7 @@ server=/zzmyt.com/114.114.114.114
 server=/zznah001.com/114.114.114.114
 server=/zzptech.com/114.114.114.114
 server=/zzpuke.com/114.114.114.114
+server=/zzqckj.com/114.114.114.114
 server=/zzqfte.com/114.114.114.114
 server=/zzqiyou.com/114.114.114.114
 server=/zzqklm.com/114.114.114.114
