accelerated-domains: add 4kdesk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4485,6 +4485,7 @@ server=/4ir17.icu/114.114.114.114
 server=/4jplus.com/114.114.114.114
 server=/4k123.com/114.114.114.114
 server=/4kbizhi.com/114.114.114.114
+server=/4kdesk.com/114.114.114.114
 server=/4kgood.com/114.114.114.114
 server=/4kong.com/114.114.114.114
 server=/4kya.com/114.114.114.114
