--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12403,6 +12403,7 @@ server=/autochips.com/114.114.114.114
 server=/autodl.com/114.114.114.114
 server=/autodmp.com/114.114.114.114
 server=/autodwg.com/114.114.114.114
+server=/autoecosystems.com/114.114.114.114
 server=/autoengine.com/114.114.114.114
 server=/autoesd.com/114.114.114.114
 server=/autofull.net/114.114.114.114
