--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72537,6 +72537,7 @@ server=/racktray.com/114.114.114.114
 server=/racpro.net/114.114.114.114
 server=/racsd.com/114.114.114.114
 server=/racymj.com/114.114.114.114
+server=/radar-ev.com/114.114.114.114
 server=/radicalmail.net/114.114.114.114
 server=/radida.com/114.114.114.114
 server=/radio1964.com/114.114.114.114
