accelerated-domains: add zerontruck.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101456,6 +101456,7 @@ server=/zerocollege.com/114.114.114.114
 server=/zerogfans.com/114.114.114.114
 server=/zeroling.com/114.114.114.114
 server=/zerongjituan.com/114.114.114.114
+server=/zerontruck.com/114.114.114.114
 server=/zeroonead.com/114.114.114.114
 server=/zerustech.com/114.114.114.114
 server=/zeryt111.fun/114.114.114.114
