accelerated-domains: add lingboxauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57456,6 +57456,7 @@ server=/lingangic.com/114.114.114.114
 server=/lingaoren.com/114.114.114.114
 server=/lingb.net/114.114.114.114
 server=/lingbao-e.com/114.114.114.114
+server=/lingboxauto.com/114.114.114.114
 server=/lingceu.com/114.114.114.114
 server=/lingd.com/114.114.114.114
 server=/lingdai.name/114.114.114.114
