accelerated-domains: add bqlcev.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16395,6 +16395,7 @@ server=/bqge.org/114.114.114.114
 server=/bqgwap.com/114.114.114.114
 server=/bqgwu.net/114.114.114.114
 server=/bqgxsw.com/114.114.114.114
+server=/bqlcev.com/114.114.114.114
 server=/bqldy.com/114.114.114.114
 server=/bqpoint.com/114.114.114.114
 server=/bqq8.com/114.114.114.114
