accelerated-domains: add meidongauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60961,6 +60961,7 @@ server=/meide-casting.com/114.114.114.114
 server=/meidebi.com/114.114.114.114
 server=/meidecloud.com/114.114.114.114
 server=/meideng.net/114.114.114.114
+server=/meidongauto.com/114.114.114.114
 server=/meidunyipin.com/114.114.114.114
 server=/meiduoxian.com/114.114.114.114
 server=/meidusacloud.com/114.114.114.114
