accelerated-domains: add igdcc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47076,6 +47076,7 @@ server=/igaoda.com/114.114.114.114
 server=/igaosheng.com/114.114.114.114
 server=/igarwin.com/114.114.114.114
 server=/igbill.com/114.114.114.114
+server=/igdcc.com/114.114.114.114
 server=/igdzc.com/114.114.114.114
 server=/igea-un.org/114.114.114.114
 server=/igeak.com/114.114.114.114
