accelerated-domains: add kaiyihome.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53476,6 +53476,7 @@ server=/kaixue.io/114.114.114.114
 server=/kaiyanapp.com/114.114.114.114
 server=/kaiygame.com/114.114.114.114
 server=/kaiyi.cool/114.114.114.114
+server=/kaiyihome.com/114.114.114.114
 server=/kaiyinedu.com/114.114.114.114
 server=/kaiyuan.me/114.114.114.114
 server=/kaiyuan308.vip/114.114.114.114
