accelerated-domains: add vgvmotor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87126,6 +87126,7 @@ server=/vgooo.com/114.114.114.114
 server=/vgoyun.com/114.114.114.114
 server=/vgtime.com/114.114.114.114
 server=/vgunxpkt.com/114.114.114.114
+server=/vgvmotor.com/114.114.114.114
 server=/vgyuhu.com/114.114.114.114
 server=/vhall.com/114.114.114.114
 server=/vhallyun.com/114.114.114.114
