accelerated-domains: add yuanhangqiche.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99660,6 +99660,7 @@ server=/yuanfudao.com/114.114.114.114
 server=/yuanfudao.ws/114.114.114.114
 server=/yuangongbao.com/114.114.114.114
 server=/yuanhaitaiji.com/114.114.114.114
+server=/yuanhangqiche.com/114.114.114.114
 server=/yuanhangzyt.com/114.114.114.114
 server=/yuanhaomumen.com/114.114.114.114
 server=/yuanhengyi.com/114.114.114.114
