--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99765,6 +99765,7 @@ server=/yudianda.com/114.114.114.114
 server=/yudiangame.vip/114.114.114.114
 server=/yudiaomingjia.com/114.114.114.114
 server=/yudiu.com/114.114.114.114
+server=/yudoauto.com/114.114.114.114
 server=/yudouyudou.com/114.114.114.114
 server=/yue-grh.com/114.114.114.114
 server=/yue-tao.com/114.114.114.114
