accelerated-domains: add chtcmotor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20919,6 +20919,7 @@ server=/chsou.com/114.114.114.114
 server=/chspv.com/114.114.114.114
 server=/chste.com/114.114.114.114
 server=/chszzy.com/114.114.114.114
+server=/chtcmotor.com/114.114.114.114
 server=/chtf.com/114.114.114.114
 server=/chtfund.com/114.114.114.114
 server=/chtgc.com/114.114.114.114
