--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18328,6 +18328,7 @@ server=/cdcxhl.com/114.114.114.114
 server=/cdcxsd.com/114.114.114.114
 server=/cdcyts.com/114.114.114.114
 server=/cdcz.net/114.114.114.114
+server=/cddayun.com/114.114.114.114
 server=/cddengji.com/114.114.114.114
 server=/cddgg.com/114.114.114.114
 server=/cddgg.net/114.114.114.114
