accelerated-domains: add yangtse-automobile.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96432,6 +96432,7 @@ server=/yangtaolujiu.com/114.114.114.114
 server=/yangtaolvxing.com/114.114.114.114
 server=/yangtengfei.com/114.114.114.114
 server=/yangtianb.com/114.114.114.114
+server=/yangtse-automobile.com/114.114.114.114
 server=/yangtse.com/114.114.114.114
 server=/yangtze-elevator.com/114.114.114.114
 server=/yangwajia.com/114.114.114.114
