--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97626,6 +97626,7 @@ server=/yilule.com/114.114.114.114
 server=/yiluup.com/114.114.114.114
 server=/yiluzouhao.com/114.114.114.114
 server=/yilvcheng.com/114.114.114.114
+server=/yima88.com/114.114.114.114
 server=/yimakk.com/114.114.114.114
 server=/yimao.net/114.114.114.114
 server=/yimaoip.com/114.114.114.114
