accelerated-domains: add superic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80533,6 +80533,7 @@ server=/supercrm.com/114.114.114.114
 server=/superepoxyresin.com/114.114.114.114
 server=/superfix.com/114.114.114.114
 server=/superhcloud.com/114.114.114.114
+server=/superic.com/114.114.114.114
 server=/superiorscope.com/114.114.114.114
 server=/superjj.online/114.114.114.114
 server=/superjq.com/114.114.114.114
