--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9621,6 +9621,7 @@ server=/aerfaying.com/114.114.114.114
 server=/aero-shenyang.com/114.114.114.114
 server=/aerochina.net/114.114.114.114
 server=/aerocityholding.com/114.114.114.114
+server=/aerofugia.com/114.114.114.114
 server=/aeryt111.fun/114.114.114.114
 server=/aesdrink.com/114.114.114.114
 server=/aesmysecurebill.com/114.114.114.114
