accelerated-domains: add gaofenzi.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33807,6 +33807,7 @@ server=/gaofans.com/114.114.114.114
 server=/gaofeie.com/114.114.114.114
 server=/gaofen.com/114.114.114.114
 server=/gaofenplatform.com/114.114.114.114
+server=/gaofenzi.org/114.114.114.114
 server=/gaofushuai.com/114.114.114.114
 server=/gaogpress.com/114.114.114.114
 server=/gaoguai.com/114.114.114.114
