--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42459,6 +42459,7 @@ server=/hik-cloud.com/114.114.114.114
 server=/hik-park.com/114.114.114.114
 server=/hikailink.com/114.114.114.114
 server=/hikari-ch.com/114.114.114.114
+server=/hikauto.com/114.114.114.114
 server=/hikcreate.com/114.114.114.114
 server=/hikerfans.com/114.114.114.114
 server=/hikihj.com/114.114.114.114
