accelerated-domains: add baicrx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12920,6 +12920,7 @@ server=/baicizhan.org/114.114.114.114
 server=/baiclouds.com/114.114.114.114
 server=/baicmotor.com/114.114.114.114
 server=/baicmotorsales.com/114.114.114.114
+server=/baicrx.com/114.114.114.114
 server=/baicuoa.com/114.114.114.114
 server=/baidajob.com/114.114.114.114
 server=/baidao.com/114.114.114.114
