accelerated-domains: add jiayuan-ev.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50204,6 +50204,7 @@ server=/jiayiss.com/114.114.114.114
 server=/jiayoujsq.com/114.114.114.114
 server=/jiayouxueba.com/114.114.114.114
 server=/jiayu.yoga/114.114.114.114
+server=/jiayuan-ev.com/114.114.114.114
 server=/jiayuan-law.com/114.114.114.114
 server=/jiayuan.com/114.114.114.114
 server=/jiayuanzhang.com/114.114.114.114
