accelerated-domains: add visu-autotec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87395,6 +87395,7 @@ server=/vista-china.net/114.114.114.114
 server=/vista123.com/114.114.114.114
 server=/vistahelmets.com/114.114.114.114
 server=/vistastory.com/114.114.114.114
+server=/visu-autotec.com/114.114.114.114
 server=/visualchina.com/114.114.114.114
 server=/visvachina.com/114.114.114.114
 server=/visvn.com/114.114.114.114
