accelerated-domains: add baibian365.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12890,6 +12890,7 @@ server=/baiao.com/114.114.114.114
 server=/baibailou.com/114.114.114.114
 server=/baibaipei.com/114.114.114.114
 server=/baibaoyun.com/114.114.114.114
+server=/baibian365.com/114.114.114.114
 server=/baibianyishu.com/114.114.114.114
 server=/baibm.com/114.114.114.114
 server=/baibo8.com/114.114.114.114
