--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59896,6 +59896,7 @@ server=/lzzy.net/114.114.114.114
 server=/lzzyy.com/114.114.114.114
 server=/m-edu.com/114.114.114.114
 server=/m-finder.com/114.114.114.114
+server=/m-hero.com/114.114.114.114
 server=/m-rainbow.com/114.114.114.114
 server=/m.biz/114.114.114.114
 server=/m.dji.com/114.114.114.114
