accelerated-domains: add shanghaigm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76032,6 +76032,7 @@ server=/shanghaidelong.com/114.114.114.114
 server=/shanghaidisneyresort.com/114.114.114.114
 server=/shanghaidite.com/114.114.114.114
 server=/shanghaifz.com/114.114.114.114
+server=/shanghaigm.com/114.114.114.114
 server=/shanghaigobroadhospital.com/114.114.114.114
 server=/shanghaihino.com/114.114.114.114
 server=/shanghaihuanli.com/114.114.114.114
