accelerated-domains: add cpcaauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23356,6 +23356,7 @@ server=/cpass.com/114.114.114.114
 server=/cpatrk.net/114.114.114.114
 server=/cpbao.com/114.114.114.114
 server=/cpc.cc/114.114.114.114
+server=/cpcaauto.com/114.114.114.114
 server=/cpcccac.com/114.114.114.114
 server=/cpcell.com/114.114.114.114
 server=/cpcep.com/114.114.114.114
