accelerated-domains: add bajasaechina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13205,6 +13205,7 @@ server=/baizhanlive.com/114.114.114.114
 server=/baizhiedu.com/114.114.114.114
 server=/baizhu.cc/114.114.114.114
 server=/baizlink.com/114.114.114.114
+server=/bajasaechina.com/114.114.114.114
 server=/bajiebofang.com/114.114.114.114
 server=/bajiehechuang.com/114.114.114.114
 server=/bajiexinxi.net/114.114.114.114
