accelerated-domains: add qihangcrrc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70678,6 +70678,7 @@ server=/qiguo.com/114.114.114.114
 server=/qiguoread.com/114.114.114.114
 server=/qihanbio.com/114.114.114.114
 server=/qihang.cab/114.114.114.114
+server=/qihangcrrc.com/114.114.114.114
 server=/qihangw.com/114.114.114.114
 server=/qihaoip.com/114.114.114.114
 server=/qihaoqu.com/114.114.114.114
