--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47746,6 +47746,7 @@ server=/incsg.com/114.114.114.114
 server=/inctrip.com/114.114.114.114
 server=/ind-app-comp.com/114.114.114.114
 server=/ind-map.com/114.114.114.114
+server=/ind4.net/114.114.114.114
 server=/ind9ed.com/114.114.114.114
 server=/indexea.com/114.114.114.114
 server=/indexedu.com/114.114.114.114
