accelerated-domains: add qxbsk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72256,6 +72256,7 @@ server=/qx66.cc/114.114.114.114
 server=/qx8.cc/114.114.114.114
 server=/qxad.com/114.114.114.114
 server=/qxbnkj.com/114.114.114.114
+server=/qxbsk.com/114.114.114.114
 server=/qxckjr.com/114.114.114.114
 server=/qxcu.com/114.114.114.114
 server=/qxdaojia.com/114.114.114.114
