accelerated-domains: add zpparts.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104506,6 +104506,7 @@ server=/zplayworld.com/114.114.114.114
 server=/zpm.so/114.114.114.114
 server=/zpmc.com/114.114.114.114
 server=/zpmg.com/114.114.114.114
+server=/zpparts.com/114.114.114.114
 server=/zprc.cc/114.114.114.114
 server=/zpstar.com/114.114.114.114
 server=/zpt966033.com/114.114.114.114
