accelerated-domains: add baolong.biz

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13496,6 +13496,7 @@ server=/baoliannet.com/114.114.114.114
 server=/baolic.com/114.114.114.114
 server=/baolimingyuefenghua.com/114.114.114.114
 server=/baolizx.com/114.114.114.114
+server=/baolong.biz/114.114.114.114
 server=/baolong.com/114.114.114.114
 server=/baoltx.com/114.114.114.114
 server=/baolu.store/114.114.114.114
