accelerated-domains: add feiauto.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31536,6 +31536,7 @@ server=/fehorizon.com/114.114.114.114
 server=/fei580.com/114.114.114.114
 server=/fei65.com/114.114.114.114
 server=/feiair.com/114.114.114.114
+server=/feiauto.com/114.114.114.114
 server=/feibajiasu.com/114.114.114.114
 server=/feibaokeji.com/114.114.114.114
 server=/feiben-starter.com/114.114.114.114
