accelerated-domains: add lanbenjia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55773,6 +55773,7 @@ server=/lan-lin.com/114.114.114.114
 server=/lan-ning.com/114.114.114.114
 server=/lan1001.com/114.114.114.114
 server=/lanall.com/114.114.114.114
+server=/lanbenjia.com/114.114.114.114
 server=/lanbing510.info/114.114.114.114
 server=/lanbinimall.com/114.114.114.114
 server=/lanbts.com/114.114.114.114
