accelerated-domains: add shautomuseum.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76294,6 +76294,7 @@ server=/sharpon.com/114.114.114.114
 server=/shartu.com/114.114.114.114
 server=/shasx.com/114.114.114.114
 server=/shatian.org/114.114.114.114
+server=/shautomuseum.com/114.114.114.114
 server=/shavingbrush-china.com/114.114.114.114
 server=/shawdo.com/114.114.114.114
 server=/shawdubie.com/114.114.114.114
