accelerated-domains: add qipeipu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71027,6 +71027,7 @@ server=/qipai007.com/114.114.114.114
 server=/qipaifan.com/114.114.114.114
 server=/qipamaijia.com/114.114.114.114
 server=/qipayuan.com/114.114.114.114
+server=/qipeipu.com/114.114.114.114
 server=/qipeiren.com/114.114.114.114
 server=/qipeng.com/114.114.114.114
 server=/qipie.com/114.114.114.114
