--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89322,6 +89322,7 @@ server=/wenancehua.com/114.114.114.114
 server=/wenancn.com/114.114.114.114
 server=/wenandaquan.com/114.114.114.114
 server=/wenangou.com/114.114.114.114
+server=/wenanwang.com/114.114.114.114
 server=/wenanzhe.com/114.114.114.114
 server=/wenbo.cc/114.114.114.114
 server=/wenbofund.com/114.114.114.114
