--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84393,6 +84393,7 @@ server=/topyun.vip/114.114.114.114
 server=/topzj.com/114.114.114.114
 server=/torch.plus/114.114.114.114
 server=/torcstark.com/114.114.114.114
+server=/toromotor.com/114.114.114.114
 server=/torontobotdns.com/114.114.114.114
 server=/torosur.com/114.114.114.114
 server=/torovo.com/114.114.114.114
