accelerated-domains: add tuopu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85271,6 +85271,7 @@ server=/tuoluowang.com/114.114.114.114
 server=/tuoluozhuan.net/114.114.114.114
 server=/tuoniaox.com/114.114.114.114
 server=/tuopanban.com/114.114.114.114
+server=/tuopu.com/114.114.114.114
 server=/tuoren.com/114.114.114.114
 server=/tuoshuohulan.com/114.114.114.114
 server=/tuotoo.com/114.114.114.114
