--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -104081,6 +104081,7 @@ server=/zk35.xyz/114.114.114.114
 server=/zk5u.com/114.114.114.114
 server=/zk71.com/114.114.114.114
 server=/zkailun.com/114.114.114.114
+server=/zkauto.com/114.114.114.114
 server=/zkb77.com/114.114.114.114
 server=/zkbhj.com/114.114.114.114
 server=/zkbs.net/114.114.114.114
