--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31325,6 +31325,7 @@ server=/favorites.ren/114.114.114.114
 server=/faw-benteng.com/114.114.114.114
 server=/faw-vw.com/114.114.114.114
 server=/fawan.com/114.114.114.114
+server=/faway.com/114.114.114.114
 server=/fawsoft.com/114.114.114.114
 server=/fawulu.com/114.114.114.114
 server=/fax52.com/114.114.114.114
