--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46217,6 +46217,7 @@ server=/i-shunxi.com/114.114.114.114
 server=/i-size.com/114.114.114.114
 server=/i-tetris.com/114.114.114.114
 server=/i-tongfang.com/114.114.114.114
+server=/i-vista.org/114.114.114.114
 server=/i-xiaohaibao.com/114.114.114.114
 server=/i-xinnuo.com/114.114.114.114
 server=/i-xoron.com/114.114.114.114
