--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87659,6 +87659,7 @@ server=/voldp.com/114.114.114.114
 server=/voleai.com/114.114.114.114
 server=/volic.download.prss.microsoft.com/114.114.114.114
 server=/volit.com/114.114.114.114
+server=/volkswagen-anhui.com/114.114.114.114
 server=/volleychina.org/114.114.114.114
 server=/voltmemo.com/114.114.114.114
 server=/vomicer.com/114.114.114.114
