--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35910,6 +35910,7 @@ server=/googvv.com/114.114.114.114
 server=/gooioo.com/114.114.114.114
 server=/goolemall.com/114.114.114.114
 server=/goolink.org/114.114.114.114
+server=/goome.net/114.114.114.114
 server=/goonemei.com/114.114.114.114
 server=/gooo8.com/114.114.114.114
 server=/gooogua.com/114.114.114.114
