accelerated-domains: add hrddqc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43951,6 +43951,7 @@ server=/hrbzyy.com/114.114.114.114
 server=/hrccb.com/114.114.114.114
 server=/hrcfc.com/114.114.114.114
 server=/hrday.com/114.114.114.114
+server=/hrddqc.com/114.114.114.114
 server=/hrdhej.xyz/114.114.114.114
 server=/hrdnkj.com/114.114.114.114
 server=/href.lu/114.114.114.114
