--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -2885,6 +2885,7 @@ server=/26ks.cc/114.114.114.114
 server=/26s.com/114.114.114.114
 server=/26youxi.com/114.114.114.114
 server=/26yx.com/114.114.114.114
+server=/270che.com/114.114.114.114
 server=/270top.com/114.114.114.114
 server=/27195.vip/114.114.114.114
 server=/27270.com/114.114.114.114
