--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29673,6 +29673,7 @@ server=/ehuijing.com/114.114.114.114
 server=/ehujia.com/114.114.114.114
 server=/ehuoke.com/114.114.114.114
 server=/ehuoyan.com/114.114.114.114
+server=/ehuoyun.com/114.114.114.114
 server=/ehutu.com/114.114.114.114
 server=/ehuzhu.com/114.114.114.114
 server=/ehxyz.com/114.114.114.114
