accelerated-domains: add dolphincube.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27463,6 +27463,7 @@ server=/dollun.com/114.114.114.114
 server=/dolphin-browser.com/114.114.114.114
 server=/dolphin-global.com/114.114.114.114
 server=/dolphin.com/114.114.114.114
+server=/dolphincube.com/114.114.114.114
 server=/dolphinphp.com/114.114.114.114
 server=/dom-3d.net/114.114.114.114
 server=/domabio.com/114.114.114.114
