--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31328,6 +31328,7 @@ server=/favoritefoodcompany.com/114.114.114.114
 server=/favorites.ren/114.114.114.114
 server=/faw-benteng.com/114.114.114.114
 server=/faw-vw.com/114.114.114.114
+server=/faw.com/114.114.114.114
 server=/fawan.com/114.114.114.114
 server=/faway.com/114.114.114.114
 server=/fawsoft.com/114.114.114.114
