--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40895,6 +40895,7 @@ server=/harvestpawn.com/114.114.114.114
 server=/harworld.com/114.114.114.114
 server=/hasaf.com/114.114.114.114
 server=/hasanye.com/114.114.114.114
+server=/hasco-group.com/114.114.114.114
 server=/hasea.com/114.114.114.114
 server=/hasee.com/114.114.114.114
 server=/hasee.net/114.114.114.114
