--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12402,6 +12402,7 @@ server=/autochina360.com/114.114.114.114
 server=/autochinashow.org/114.114.114.114
 server=/autochinazh.com/114.114.114.114
 server=/autochips.com/114.114.114.114
+server=/autochongqing.com/114.114.114.114
 server=/autodl.com/114.114.114.114
 server=/autodmp.com/114.114.114.114
 server=/autodwg.com/114.114.114.114
