accelerated-domains: add autostreets.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12430,6 +12430,7 @@ server=/autosey.com/114.114.114.114
 server=/autoshafa.com/114.114.114.114
 server=/autoshanghai.org/114.114.114.114
 server=/autosmt.net/114.114.114.114
+server=/autostreets.com/114.114.114.114
 server=/autosup.com/114.114.114.114
 server=/autothinker.net/114.114.114.114
 server=/autounicom.com/114.114.114.114
