accelerated-domains: add jmev.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51532,6 +51532,7 @@ server=/jmdna.com/114.114.114.114
 server=/jmed.com/114.114.114.114
 server=/jmeii.com/114.114.114.114
 server=/jmeizs.com/114.114.114.114
+server=/jmev.com/114.114.114.114
 server=/jmgle.com/114.114.114.114
 server=/jmglg.com/114.114.114.114
 server=/jmgo.com/114.114.114.114
